# modfossa

./: .gitignore  CMakeLists.txt  INSTALL  README.md
ModFossaCpp/: CMakeLists.txt
ModFossaCpp/dependencies/gtest-1.6.0/: Makefile
ModFossaCpp/dependencies/gtest-1.6.0/make/: sample1_unittest
ModFossaCpp/doc/: Doxyfile
ModFossaCpp/doc/html/: Connection_8h.html  Connection_8h__incl.md5  Connection_8h_source.html  ConstantRateConstantTest_8cpp.html  ConstantRateConstantTest_8cpp__incl.map  ConstantRateConstantTest_8cpp__incl.md5  ConstantRateConstantTest_8cpp_source.html  ConstantRateConstant_8h.html  ConstantRateConstant_8h__dep__incl.map  ConstantRateConstant_8h__dep__incl.md5  ConstantRateConstant_8h__incl.map  ConstantRateConstant_8h__incl.md5  ConstantRateConstant_8h_source.html  MarkovModel_8cpp.html  MarkovModel_8cpp__incl.map  MarkovModel_8cpp__incl.md5  MarkovModel_8cpp_source.html  MarkovModel_8h.html  MarkovModel_8h__dep__incl.map  MarkovModel_8h__dep__incl.md5  MarkovModel_8h__incl.md5  MarkovModel_8h_source.html  ModelDescription_8h.html  ModelDescription_8h__incl.md5  ModelDescription_8h_source.html  RateConstantBase_8cpp.html  RateConstantBase_8cpp__incl.map  RateConstantBase_8cpp__incl.md5  RateConstantBase_8cpp_source.html  RateConstantBase_8h.html  RateConstantBase_8h__dep__incl.map  RateConstantBase_8h__dep__incl.md5  RateConstantBase_8h__incl.md5  RateConstantBase_8h_source.html  RateConstantFactory_8cpp.html  RateConstantFactory_8cpp__incl.map  RateConstantFactory_8cpp__incl.md5  RateConstantFactory_8cpp_source.html  RateConstantFactory_8h.html  RateConstantFactory_8h__dep__incl.map  (+82 more)
ModFossaCpp/doc/html/search/: all_61.html  all_62.html  all_63.html  all_65.html  all_6b.html  all_6d.html  all_72.html  all_73.html  all_74.html  all_7e.html  classes_63.html  classes_6d.html  classes_72.html  classes_73.html  enums_72.html  enumvalues_62.html  enumvalues_63.html  enumvalues_65.html  enumvalues_6c.html  enumvalues_73.html  files_63.html  files_6d.html  files_72.html  files_73.html  functions_62.html  functions_63.html  functions_67.html  functions_6d.html  functions_72.html  functions_73.html  search.js  variables_63.html  variables_65.html  variables_69.html  variables_6d.html  (+3 more)
ModFossaCpp/doc/latex/: Connection_8h.tex  Connection_8h__incl.md5  ConstantRateConstantTest_8cpp.tex  ConstantRateConstantTest_8cpp__incl.md5  ConstantRateConstant_8h.tex  ConstantRateConstant_8h__dep__incl.md5  ConstantRateConstant_8h__incl.md5  MarkovModel_8cpp.tex  MarkovModel_8cpp__incl.md5  MarkovModel_8h.tex  MarkovModel_8h__dep__incl.md5  MarkovModel_8h__incl.md5  ModelDescription_8h.tex  ModelDescription_8h__incl.md5  RateConstantBase_8cpp.tex  RateConstantBase_8cpp__incl.md5  RateConstantBase_8h.tex  RateConstantBase_8h__dep__incl.md5  RateConstantBase_8h__incl.md5  RateConstantFactory_8cpp.tex  RateConstantFactory_8cpp__incl.md5  RateConstantFactory_8h.tex  RateConstantFactory_8h__dep__incl.md5  RateConstantFactory_8h__incl.md5  RateConstantType_8h.tex  RateConstantType_8h__dep__incl.md5  StateOfTheWorld_8cpp.tex  StateOfTheWorld_8cpp__incl.md5  StateOfTheWorld_8h.tex  StateOfTheWorld_8h__dep__incl.md5  State_8cpp.tex  State_8cpp__incl.md5  State_8h.tex  State_8h__dep__incl.md5  State_8h__incl.md5  annotated.tex  classConnection.tex  classConnection__coll__graph.md5  classConstantRateConstant.tex  classConstantRateConstantTest.tex  (+28 more)
ModFossaCpp/include/: Concentration.h  Connection.h  ConstantRateConstant.h  MarkovModel.h  ModelDescription.h  RateConstantBase.h  SigmoidalRateConstant.h  State.h  StateOfTheWorld.h
ModFossaCpp/include/ModelDefinition/: Concentration.h  Connection.h  ConstantRateConstant.h  HelperFunctions.h  LigandGatedRateConstant.h  MarkovModel.h  Matrix.h  ModelDescription.h  RateConstantBase.h  SigmoidalRateConstant.h  State.h  StateOfTheWorld.h  Transition.h  TransitionMatrix.h
ModFossaCpp/python/: Angermann2006.py  Benzanilla_Vandenberg_Na.py  modFossaTest.py
ModFossaCpp/python/modFossa/: __init__.py  model_definition.py
ModFossaCpp/samples/: Angermann2006.py  Benzanilla_Vandenberg_Na.py  ThreeState.cpp  ThreeState.py  sample1.cpp
ModFossaCpp/src/: Analysis.cpp  Connection.h  ConstantRateConstant.cpp  ConstantRateConstant.h  Experiment.cpp  ExperimentSweep.cpp  HelperFunctions.cpp  LigandGatedRateConstant.cpp  MarkovModel.cpp  MarkovModel.h  ODESolver.cpp  PyInterface.cpp  RateConstantBase.cpp  Results.cpp  SigmoidalRateConstant.cpp  SimulationRunner.cpp  Simulator.cpp  State.cpp  StateOfTheWorld.cpp  TransitionMatrix.cpp  ValidationResults.cpp  VoltageProtocol.cpp  VoltageProtocolStage.cpp
ModFossaCpp/src/MarkovModel/: MarkovModel.h
ModFossaCpp/src/ModelDefinition/: ConstantRateConstant.cpp  HelperFunctions.cpp  LigandGatedRateConstant.cpp  MarkovModel.cpp  SigmoidalRateConstant.cpp  State.cpp  StateOfTheWorld.cpp  TransitionMatrix.cpp
ModFossaCpp/src/RateConstant/: RateConstantBase.h  RateConstantFactory.cpp  RateConstantFactory.h  RateConstantType.h
ModFossaCpp/src/SimulationState/: StateOfTheWorld.cpp
ModFossaCpp/src/State/: State.cpp
ModFossaCpp/test/: ConstantRateConstantTest.cpp  ExperimentSweepTest.cpp  ExperimentTest.cpp  LigandGatedRateConstantTest.cpp  MarkovModelTest.cpp  ODESolverTest.cpp  SigmoidalRateConstantTest.cpp  SimulationRunnerTest.cpp  StateOfTheWorldTest.cpp  StateTest.cpp  TransitionMatrixTest.cpp  ValidationResultsTest.cpp  VoltageProtocolTest.cpp
ThreeStateModel/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  Doxyfile  Gnuplot.launch  README  ThreeStateModel Default.launch
ThreeStateModel/CMake/: CMakeLists.txt
ThreeStateModel/include/ModFossa/: Model.h  RateConstant.h  State.h  SundialsCpp.h  Transition.h  Util.h  VoltageClamp.h  VoltageEvent.h  VoltageProtocol.h  uncopyable.h
ThreeStateModel/python/: .gitignore  run.py
ThreeStateModel/scripts/: plot.gnuplot  result.txt  run.py
ThreeStateModel/src/: CMakeLists.txt  ModFossaPyInterface.cpp  Model.cpp  Model.h  RateConstant.cpp  State.cpp  SundialsCpp.cpp  SundialsCpp.h  VoltageClamp.cpp  VoltageProtocol.cpp  main.cpp
(+107 files in other folders)
